# mini_myers

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  plot.py  test.txt
benches/: edlib_bench.rs  sassy.rs
src/: backend.rs  iupac.rs  lib.rs  main.rs  scan.rs  search.rs  tqueries.rs
