[package]
name = "mini_myers"
version = "0.1.0"
edition = "2021"
authors = ["Rick Beeloo <biobeeloo@gmail.com>"]
license = "MIT"
description = "SIMD myers for short queries"
readme = "README.md"
homepage = "https://github.com/rickbeeloo/mini_myers"
repository = "https://github.com/rickbeeloo/mini_myers"
keywords = ["simd", "myers", "short queries", "dna"]
categories = ["science"]

[lib]
name = "mini_myers"
path = "src/lib.rs"

[[bin]]
name = "mini_myers"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"

# By default, use wide 0.7; user can enable "latest_wide" for 0.8.1 instead.
[dependencies.wide_v07]
package = "wide"
version = "0.7"
optional = true

[dependencies.wide_v08]
package = "wide"
version = "0.8.1"
optional = true

[features]
default = ["old_wide"]
old_wide = ["dep:wide_v07"]
latest_wide = ["dep:wide_v08"]
# Make old_wide and latest_wide mutually exclusive
# When latest_wide is enabled, old_wide should be disabled

[dev-dependencies]
sassy = "0.1.6"
rand = "0.8.5"

[[bench]]
name = "sassy"
path = "benches/sassy.rs"
harness = false

[profile.release]
debug = true
incremental = true
opt-level = 3