[package]
name = "mini_myers"
version = "0.1.1"
edition = "2021"
authors = ["Rick Beeloo <biobeeloo@gmail.com>"]
license = "MIT"
description = "SIMD myers for short queries"
readme = "README.md"
homepage = "https://github.com/rickbeeloo/mini_myers"
repository = "https://github.com/rickbeeloo/mini_myers"
keywords = ["simd", "myers", "short-seq", "dna"]
categories = ["science"]

[lib]
name = "mini_myers"
path = "src/lib.rs"

[[bin]]
name = "mini_myers"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
wide = "0.8.1"

[dev-dependencies]
sassy = "0.1.6"
rand = "0.8.5"

[[bench]]
name = "sassy"
path = "benches/sassy.rs"
harness = false

[profile.release]
debug = true
incremental = true
opt-level = 3