[package]
name = "mini_myers"
version = "0.1.3"
edition = "2021"
authors = ["Rick Beeloo <biobeeloo@gmail.com>"]
license = "MIT"
description = "SIMD myers for short queries"
readme = "README.md"
homepage = "https://github.com/rickbeeloo/mini_myers"
repository = "https://github.com/rickbeeloo/mini_myers"
keywords = ["simd", "myers", "short-seq", "dna"]
categories = ["science"]

[lib]
name = "mini_myers"
path = "src/lib.rs"

[[bin]]
name = "scan"
path = "src/bin/scan.rs"

[dependencies]
rand = "0.8.5"
wide = "0.8.1"
sassy = { git = "https://github.com/RagnarGrootKoerkamp/sassy.git", features = ["expose_trace_code"] }
pa-types = "1.2.0"
clap = { version = "4.5", features = ["derive"] }
needletail = "0.6.3"


[dev-dependencies]
sassy = { git = "https://github.com/RagnarGrootKoerkamp/sassy.git", features = ["expose_trace_code"] }
rand = "0.8.5"

[[bench]]
name = "sassy"
path = "benches/sassy.rs"
harness = false
profile = "release"

[profile.release]
debug = true
incremental = true
opt-level = 3

